--- a/web/src/pages/OrderDetails/OrderDetails.css
+++ b/web/src/pages/OrderDetails/OrderDetails.css
@@ -184,3 +184,12 @@ button:hover {
 .address-input{
     margin-bottom:25px;
 }
+.grayed-out {
+    background-color: #f5f5f5;
+    color: #a9a9a9;
+    border: 1px solid #ccc;
+}
+
+.grayed-text {
+    color: #a9a9a9;
+}
