--- a/web/src/pages/DeliveryExecutive/Delivery.css
+++ b/web/src/pages/DeliveryExecutive/Delivery.css
@@ -1454,6 +1454,11 @@ label.form-label {
     color: #333;
 }
 
+.details-right{
+    display: flex;
+    justify-content: flex-end;
+}
+
 .details-right button {
     padding: 10px 15px;
     border-radius: 5px;
@@ -1469,6 +1474,15 @@ label.form-label {
 
 .details-right .end-delivery {
     background: #e74c3c;
+    color: white;
+}
+.details-right .pickedup-button {
+    background: #007bff; /* New background color for Pickedup */
+    color: white;
+}
+
+.details-right .delivered-button {
+    background: #28a745; /* New background color for Delivered */
     color: white;
 }
 
