--- a/web/src/pages/Customer/style.css
+++ b/web/src/pages/Customer/style.css
@@ -37,6 +37,62 @@
     #FFD04D YELLOW
     
 */
+
+.profile-setup-popup {
+    display: none;      
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100vh;
+    /* max-width: 400px; */
+    background-color: rgba(26, 26, 26, 0.636);
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    padding: 20px;
+    z-index: 1500;
+    text-align: center;
+    /* border-radius: 8px; */
+    align-items: center;
+    justify-content: center;
+}
+
+.profile-setup-popup .popup-content {
+    width: 30%;
+    height: 30vh;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    margin: 0;
+    border-radius: 30px;
+}
+
+.profile-setup-popup .popup-content h3 {
+    font-weight: bolderu;
+    margin-bottom: 40px;
+}
+
+.profile-setup-popup .popup-content button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #F12630;
+    color: white;
+    font-weight: bold;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.profile-setup-popup .popup-content button:hover {
+    transform: scale(1.05);
+}
+
+
+
 /* Welcome Popup */
 .welcome-popup {
     position: fixed; /* Fixed positioning to center it */
