--- a/web/src/pages/Menu/menu.css
+++ b/web/src/pages/Menu/menu.css
@@ -4,6 +4,30 @@
     box-sizing: border-box;
 }
 
+/* Scrollbar Container */
+::-webkit-scrollbar {
+    width: 10px; /* Width of the scrollbar */
+    height: 10px; /* Height for horizontal scrollbar */
+}
+
+/* Scrollbar Track */
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Track background */
+    border-radius: 5px; /* Rounded track */
+}
+
+/* Scrollbar Thumb */
+::-webkit-scrollbar-thumb {
+    background-color: #F12630; /* Scrollbar color */
+    border-radius: 5px; /* Rounded scrollbar */
+    border: 2px solid #f1f1f1; /* Creates space around thumb */
+}
+
+/* Hover Effect on Scrollbar Thumb */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #FFD04D; /* Darker shade on hover */
+}
+
 body {
     font-family: 'Outfit', sans-serif;
 }
@@ -455,7 +479,7 @@ body {
     margin: 10px;
     text-align: left;
     width: 260px;
-    height: 500px;
+    height: 400px;
 }
 .carousel-slide img{
     width: 100%;
@@ -477,7 +501,7 @@ body {
 .carousel-button, .add-to-cart, .view-cart {
     padding: 10px;
     font-size: 16px;
-    margin: 5px;
+    /* margin: 5px; */
     cursor: pointer;
 }
 .carousel-button {
@@ -497,14 +521,28 @@ body {
     right: 10px;
 }
 .add-to-cart {
-    background-color: #4CAF50;
-    color: white;
+    margin-top: 8%;
+    margin-right: 5px;
+    border-radius: 8px;
+    background-color: #FFD04D;
+    color: #333;
+    font-weight: bold;
     border: none;
+    transition: all 0.3s ease;
+}
+.add-to-cart:hover {
+    transform: scale(1.1);
 }
 .view-cart {
-    background-color: #008CBA;
+    background-color: #F12630;
     color: white;
     border: none;
+    font-weight: bold;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+}
+.view-cart:hover {
+    transform: scale(1.1);
 }
 .dish-card p {
     margin: 5px 0;
@@ -551,6 +589,12 @@ body {
         width: 100%;
     }
 }
+
+.blank-section{
+    width: 100%;    
+    height: 100px;
+}
+
 
 /* Footer section */
 footer{
