--- a/web/src/pages/Customer/style.css
+++ b/web/src/pages/Customer/style.css
@@ -279,7 +279,20 @@
     font-size: 20px;
     cursor: pointer;
 }
+.heading-for-empty-cart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center ;
+    height: 100%;
+    overflow: hidden !important; 
+}
 
+.heading-for-empty-cart video{
+width: 50%;
+height: auto;
+border-radius: 20px;
+}
 
 #cart-count {
     background-color: #ffffff;
