--- a/web/src/pages/AddRestaurant/Restaurant_public_info/Restaurant_public_info.css
+++ b/web/src/pages/AddRestaurant/Restaurant_public_info/Restaurant_public_info.css
@@ -37,53 +37,159 @@
     ::-webkit-scrollbar-thumb:hover {
         background-color: #FFD04D; /* Darker shade on hover */
     }
+
+
+    /* Error Popup Styles */
+.error-popup {
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Ensure it is above other elements */
+}
+
+.error-content {
+    background-color: #fff;
+    padding: 50px 20px;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 600px;
+    width: 80%;
+}
+
+.error-content h2 {
+    margin: 0 0 10px;
+}
+
+.error-content p {
+    margin: 0 0 20px;
+}
+
+.error-content button {
+    padding: 10px 20px;
+    background-color: #F12630;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.error-content button:hover {
+    transform: scale(1.05);
+    background-color: #FFD04D; /* Darker shade on hover */
+    font-weight: bold;
+    color: rgb(30, 30, 30);
+}
+
   
-/* Navbar Styling */
-    .navbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #02020200;
-        padding: 20px 200px;
-        color: white;
-        width: 100%;
-        position: absolute;
-        top: 0;
-        z-index: 5;
-    }
-    
-    .navbar-brand {
-        font-size: 20px;
-        font-weight: bold;
-    }
-    .navbar-brand img {
-        width: 130px;
-        /* height: 50px; */
-    }
-    
-    .navbar-links {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        gap: 15px;
-    }
-    
-    .navbar-links li {
-        display: inline;
-    }
-    
-    .navbar-links a {
-        text-decoration: none;
-        color: white;
-        font-size: 18px;
-        font-weight: 500;
-        transition: color 0.3s;
-    }
-    
-    .navbar-links a:hover {
-        color: #ffd700;
-    }
+/* ****************Navigation Bar styling****************** */
+
+
+.nav_bar{
+    height: 12vh;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    position: absolute;
+    margin: 0px auto;
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    -moz-box-pack: justify;
+    -moz-box-align: center;
+    z-index: 1000;
+    gap: 12rem;
+}
+.nav_bar .logo{
+    width: 100px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.nav_bar .nav_links .nav_list{
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    list-style: none;
+}
+.nav_bar .nav_links .nav_list li{
+    list-style: none;
+    margin: 0 20px;
+}
+.nav_bar .nav_links .nav_list li a{
+    font-size: 1.3rem;
+    text-decoration: none;
+  line-height: 1.5;
+  text-align: right;
+  vertical-align: middle;
+  font-weight: 300;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  padding: 0.8rem;
+  border-radius: 0.6rem;
+}
+.nav_bar .nav_links ul li a:hover{
+    color: rgb(236, 24, 67);
+}
+
+.nav_bar .menu{
+    display: none;
+}
+.nav_bar .signin{
+    display: inline-flex;
+    vertical-align: middle;
+    align-items: center;
+    -moz-box-pack: center;
+    justify-content: center;
+    min-height: 32px;
+    line-height: 32px;
+    outline: none;
+    white-space: nowrap;
+    font-size: 1.2rem;
+    font-weight: 300;
+    background: transparent;
+    border-color: rgb(255, 255, 255);
+    border-width: 0.1rem;
+    border-style: solid;
+    border-radius: 0.6rem;
+    color: rgb(255, 255, 255);
+    padding: 0.2rem 1.6rem;
+    opacity: 1;
+    margin: 0;
+    transition: transform 0.25s, opacity 0.25s, box-shadow 0.25s;
+}
+.nav_bar .buttons .signup{
+    margin-left: 10px;
+}
+
+.nav_bar .buttons .signin a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    transition: ease-in-out 0.2s;
+}
+.nav_bar .signin:hover{
+    background-color: #ffffff;
+    color: #F12630;
+    transform: scale(1.05);
+}
+.nav_bar .menu{
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    cursor: pointer;
+    display: none;
+}
 
 /* Hero Section Styling */
     .hero {
@@ -162,15 +268,18 @@
     }
     
     button {
-        background-color: #007BFF;
+        font-weight: bold;
+        background-color: #F12630;
         color: white;
         border: none;
         cursor: pointer;
         font-size: 16px;
+        transition: all 0.3s ease-in-out;
     }
     
     button:hover {
-        background-color: #0056b3;
+        background-color: #FFD04D;
+        color: #333;
     }
 /* Layout for Fields Side by Side */
         .cuisine-container, .price-container {
