--- a/web/src/pages/ContactUs/ContactUs.css
+++ b/web/src/pages/ContactUs/ContactUs.css
@@ -8,6 +8,90 @@
 	font-family: 'Outfit', sans-serif;
 }
 
+/* Scrollbar Container */
+::-webkit-scrollbar {
+    width: 10px; /* Width of the scrollbar */
+    height: 10px; /* Height for horizontal scrollbar */
+}
+
+/* Scrollbar Track */
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Track background */
+    border-radius: 5px; /* Rounded track */
+}
+
+/* Scrollbar Thumb */
+::-webkit-scrollbar-thumb {
+    background-color: #F12630; /* Scrollbar color */
+    border-radius: 5px; /* Rounded scrollbar */
+    border: 2px solid #f1f1f1; /* Creates space around thumb */
+}
+
+/* Hover Effect on Scrollbar Thumb */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #FFD04D; /* Darker shade on hover */
+}
+
+
+/*
+
+    #F12630 RED
+    #FFD04D YELLOW
+    
+*/
+
+
+/* Error Popup Styles */
+.error-popup {
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Ensure it is above other elements */
+}
+
+.error-content {
+    background-color: #fff;
+    padding: 50px 20px;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 600px;
+    width: 80%;
+}
+
+.error-content h2 {
+    margin: 0 0 10px;
+}
+
+.error-content p {
+    margin: 0 0 20px;
+}
+
+.error-content button {
+    padding: 10px 20px;
+    background-color: #F12630;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.error-content button:hover {
+    transform: scale(1.05);
+    background-color: #FFD04D; /* Darker shade on hover */
+    font-weight: bold;
+    color: rgb(30, 30, 30);
+}
+
+
+
 :root {
 	--navtxt: #686868;
 	--oceanblu: #FFD04D;
@@ -355,13 +439,16 @@ body {
     justify-content: space-around;
     background-color: transparent;
     position: absolute;
-    /* top: 0;
-    left: 0; */
+    top: 0;
+    left: 0;
     margin: 0px auto;
     z-index: 999;
 }
 .nav_bar .logo{
-    margin-left: 30px;
+    width: 150px;
+}
+.nav_bar .logo img{
+    width: 100%;
 }
 .nav_bar .nav_links .nav_list{
     display: flex;
@@ -894,9 +981,9 @@ footer p.copyright{
  @media(max-width: 1920px) and (min-width: 1201px){
 
     /* Nav bar */
-    .nav_bar .logo img{
-        height: 45px;
-    }
+    /* .nav_bar .logo img{
+        height: 15px;
+    } */
     .nav_bar .nav_links .nav_list{
         gap: 0.5rem;
     }
