--- a/web/src/pages/Customer/style.css
+++ b/web/src/pages/Customer/style.css
@@ -328,10 +328,10 @@
 }
 .heading-for-empty-cart {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
     justify-content:center ;
-    height: 100%;
+    height: 100vh;
     overflow: hidden !important; 
 }
 
@@ -1215,7 +1215,7 @@ footer{
     position: relative;
     bottom: 0;
     z-index: 1;
-    /* right: 100; */
+    right: 100;
     background-color: rgb(38, 38, 38);
     color: rgb(255, 255, 255);
     padding: 100px 0 30px 0;
